--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 	</build>
 	<ciManagement>
 		<system>jenkins</system>
