--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.iani.cubeside</groupId>
 	<artifactId>PlayerUUIDCache</artifactId>
-	<version>1.4.1-SNAPSHOT</version>
+	<version>1.5.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<build.number>DEV</build.number>
